# fastapi-vue-template

./: .env.example  .gitignore  .ignore  .pre-commit-config.yaml  00-START-HERE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT_MAP.md  README.md  config.yaml  copier.yml  init.sh  pyproject.toml  {{ _copier_conf.answers_file }}.jinja
.agents/skills/harness-engineering/: SKILL.md
.agents/skills/project-development/: SKILL.md
.agents/skills/template-maintenance/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: backmerge-main-to-dev.yml  ci.yml  commit-governance.yml  deploy-test.yml  pr-governance.yml  release.yml
00-START-HERE/: README.md
contracts/: openapi.json
docs/: api-conventions.md  architecture.md  ci-cd.md  coding-standards.md  configuration-guide.md  context-contracts.md  database-patterns.md  frontend-standards.md  git-workflow.md  harness-engineering.md  module-development.md  security-standards.md  template-engine.md  testing-guide.md  walkthrough.md
docs/adr/: 0001-use-copier-for-template-instantiation.md
docs/extra/: auth-patterns.md  llm-provider-router.md  observability.md  sse-streaming.md  websocket-patterns.md
harness_tests/: test_branch_workflow.py  test_context_boundary_checker.py  test_frontend_boundary_checker.py  test_governance_baseline.py  test_render_copier_backend.py  test_security_baseline.py  test_supply_chain_baseline.py
scripts/: check_context_boundaries.py  check_security_baseline.py  init.sh  render_copier_backend.py  template_smoke.py
scripts/cicd/: backmerge_main_to_dev.sh  deploy_remote_release.sh  validate_commit_messages.sh
scripts/harness/: check_api_contracts.py  check_branch_workflow.py  check_context_boundaries.py  check_frontend_boundaries.py  check_governance_baseline.py  check_runtime_baseline.py  check_security_baseline.py  check_supply_chain_baseline.py
src/app_name/: config.py  main.py  run_api.py
src/app_name/api/: deps.py
src/app_name/api/internal_v1/: router.py
src/app_name/api/public_v1/: router.py
src/app_name/api/v1/: router.py
src/app_name/contexts/_template/: README.md
src/app_name/contexts/auth/application/ports/: auth_port.py
src/app_name/contexts/auth/application/services/: auth_service.py
src/app_name/contexts/auth/domain/: entities.py
src/app_name/contexts/auth/interface/api/: auth_router.py
src/app_name/core/: logging.py  registry.py  service_factory.py  timezone.py
src/app_name/database/: mongo.py
src/app_name/migrations/: runner.py
src/app_name/models/: task.py
src/app_name/shared/events/: bus.py  models.py
src/app_name/shared/exceptions/: business_error.py  error_codes.py  handlers.py
src/app_name/shared/middleware/: base.py  request_context.py
src/app_name/shared/schemas/: response.py
src/frontend/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/frontend/src/: App.vue  main.ts
src/frontend/src/api/: index.test.ts  index.ts
src/frontend/src/composables/: useAuth.ts
src/frontend/src/pages/: Dashboard.vue  Login.vue
src/frontend/src/router/: index.ts
src/frontend/src/stores/: auth.ts
src/frontend/src/styles/: theme.css
src/frontend/src/types/: env.d.ts
src/frontend/src/utils/: auth.ts
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_api_deps.py  test_config.py  test_context_boundary_checker.py  test_core_utilities.py  test_error_handling.py  test_event_bus.py  test_exception_handlers.py  test_frontend_boundary_checker.py  test_init_script.py  test_middleware.py  test_render_copier_backend.py  test_security_baseline.py
